# PlomerSwiftSdk/Classes/OpenAPIs/Models/GetEvents200Response.swift
@@ -1,0 +1,36 @@
+//
+// GetEvents200Response.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+import AnyCodable
+#endif
+
+public struct GetEvents200Response: Codable, JSONEncodable, Hashable {
+
+    public var data: [PlomerEvent]
+    public var pagination: GetNotifications200ResponsePagination
+
+    public init(data: [PlomerEvent], pagination: GetNotifications200ResponsePagination) {
+        self.data = data
+        self.pagination = pagination
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case data
+        case pagination
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encode(data, forKey: .data)
+        try container.encode(pagination, forKey: .pagination)
+    }
+}
+
